--- a/test 2.html
+++ b/test 2.html
@@ -8,5 +8,22 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<p>
+    This paragraph
+    contains a lot of lines
+    in the source code,
+    but the browser
+    ignores it.
+    </p>
+    
+    <p>
+    This paragraph
+    contains         a lot of spaces
+    in the source         code,
+    but the        browser
+    ignores it.
+    </p>
 </body>
 </html>
