--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -23,6 +23,9 @@
     </ul>
     <button onclick="hideLi()" type="button" class="btn btn-primary">
       hide
+    </button>
+    <button onclick="hideCalass()" type="button" class="btn btn-warning">
+      cacher li class
     </button>
     <button onclick="hideCalass()" type="button" class="btn btn-warning">
       cacher li class
