--- a/Jquery/exo jq.html
+++ b/Jquery/exo jq.html
@@ -111,23 +111,71 @@
       tab4 = [3, 0, 9.2, 8, 7, 1];
       console.log(positionWhile(tab4, 1));
 
-
-
-
-
-      function numJours(moi, annee) {
-        for (i = 0; i < tab2.length; i++) {
-          if (tab[i] == moi) {
-            return tab[moi - 1];
+      function numJours(m, a) {
+        if (m == 2) {
+          if (a % 4 == 0) {
+            return 29;
+          } else {
+            return 28;
           }
-          else {
-            if moi==2;
-          }
+        }
+        let tab = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
+        return tab[m - 1];
+      }
 
+      console.log(numJours(2, 2024));
+
+      function nubJours(m, a) {
+        switch (m) {
+          case 1:
+          case 3:
+          case 5:
+          case 7:
+          case 8:
+          case 10:
+          case 12:
+            return 31;
+          case 4:
+          case 6:
+          case 9:
+          case 11:
+            return 30;
+          case 2:
+            if (a % 4 == 0) {
+              return 29;
+            }
+            return 28;
         }
       }
-      tab2 = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
-      console.log(numJours(tab2, 3));
+      console.log(nubJours(2, 2028));
+
+      function reverchaine(ch) {
+        let chInv = "";
+        for (i = ch.length - 1; i >= 0; i--) {
+          chInv = ch[i];
+        }
+        return chInv;
+      }
+      console.log(reverchaine("salut"));
+
+      function compteMotes(ch1) {
+        return ch1.split(" ").length;
+      }
+      let tab = "salut bonjour ";
+      console.log(compteMotes(tab));
+
+
+
+      function nubMots(ch1,ch2) {
+        compteMotes (ch1)==nubMots (ch2)
+        return true; {
+  
+        }
+        
+      }
+      console.log (())
+       
+
 
 
 
